--- a/branches/2.0/config/timeintervals.html
+++ b/branches/2.0/config/timeintervals.html
@@ -27,6 +27,11 @@
 <script src="js/jquery.autocomplete.js"></script>
 <link href="stylesheets/schwing.css" media="all" rel="Stylesheet" type="text/css" />
 <style type="text/css">
+
+	body {
+		background-color: #efefef;
+	}
+
 	#table_tilist {
 		border: 1px solid #666666;
 		margin-top: 5px;
@@ -62,8 +67,13 @@
 		cursor: default;
 	}
 
+	.top_buttons span.lite_Heading {
+		margin-left: 80px;
+	}
+
+
 </style>
-<body bgcolor="#EFEFEF">
+<body>
 	<div class="iframeTitleBar">
 		Time Intervals
 		<span class='refresh_icon' onclick="window.location.reload();" >&nbsp;<img src="images/refresh.png" title=" Refresh " border=0 >&nbsp;</span>
@@ -71,7 +81,7 @@
 	
 	<div class='top_buttons'>
 		<span class='guiButtonNew' onclick='ti_miscFunctions.new_TI_form();'>New Time Interval</span>
-		<span class='lite_Heading'  style='margin-left: 80px'> Time Intervals </span>
+		<span class='lite_Heading'> Time Intervals </span>
 	</div>
 
 	<table id='table_tilist' cellpadding=0 cellspacing=0 border=0 align=center></table>
