--- a/config/timeintervals.html
+++ b/config/timeintervals.html
@@ -19,6 +19,8 @@
  * at the top of the source tree.
  *
 -->
+<html>
+<head>
 <script src="js/jquery.js"></script>
 <script src="js/astman.js"></script>
 <script src="js/timeintervals.js"></script>
@@ -73,6 +75,7 @@
 
 
 </style>
+</head>
 <body>
 	<div class="iframeTitleBar">
 		Time Intervals
@@ -176,3 +179,4 @@
 </div>
 
 </body>
+</html>
