--- a/config/index.html
+++ b/config/index.html
@@ -329,7 +329,7 @@ var sessionData = {
 <script>
 	var session = {
 		debug_log: [],
-		log: true,
+		log: false,
 		log_modes: {
 			ajax: true,
 			console: true,
