--- a/config/flipadvanced.html
+++ b/config/flipadvanced.html
@@ -61,7 +61,7 @@ var localajaxinit = function(){
 
 var update_status = function(){
 
-	var am = ASTGUI.cookies.getCookie('advancedmode');
+	var am = top.cookies.get('advancedmode');
 	if( am && am == 'yes' ){
 		_$('flip_button').innerHTML = 'Hide Advanced Options';
 		_$('flip_decsription').innerHTML = "Clicking the 'Hide Advanced Options' button below removes the advanced menu items on the left hand sidebar"
