--- a/config/password.html
+++ b/config/password.html
@@ -28,7 +28,7 @@
 
 var DOM_newpass ;
 var DOM_newpass_rep ;
-var CURRENT_Username = top.ASTGUI.cookies.getCookie('username');
+var CURRENT_Username = top.cookies.get('username');
 
 var compare_passwords = function(event){
 	if(event.keyCode == 13){
