--- a/config/features2.html
+++ b/config/features2.html
@@ -182,6 +182,7 @@
 			<div class="feature disabled">
 				<label for="feature_featuredigittimeout">Feature Digit Timeout:</label>
 				<input type="text" id="feature_featuredigittimeout" size="4" />
+				(milliseconds)
 				<span class="update"></span>
 			</div>
 		</div>
