--- a/config/dialplans.html
+++ b/config/dialplans.html
@@ -76,7 +76,7 @@
 	</TABLE>
 	<TABLE	align=center cellpadding=2 cellspacing=2 border=0>
 	<TR>	<TD align="right"><nobr>&nbsp;&nbsp;&nbsp;DialPlan Name:</nobr></TD>
-		<TD><input id="edit_dlpn_name" size=24 field_name='DialPlan Name' validation='alphanumericUnd' required='yes'></TD>
+		<TD><input id="edit_dlpn_name" size=24 maxlength="70" field_name='DialPlan Name' validation='alphanumericUnd' required='yes'></TD>
 	</TR>
 	<TR>	<TD align="right" colspan=2 height=10></TD></TR>
 
