--- a/config/reboot.html
+++ b/config/reboot.html
@@ -1,7 +1,7 @@
 <!--
  * Asterisk-GUI	- an Asterisk configuration interface
  *
- * Reboot appliance
+ * Reboot Asterisk
  *
  * Copyright (C) 2008, Digium, Inc.
  *
@@ -28,7 +28,7 @@
 <script>
 
 var localajaxinit = function(){
-	top.document.title = "Reboot Appliance" ;
+	top.document.title = "Reboot Asterisk" ;
 	var t = [
 		{url:'preferences.html', desc:'General Preferences' } ,
 		{url:'language.html', desc:'Language' } ,
@@ -45,7 +45,7 @@ var localajaxinit = function(){
 </script>
 <body bgcolor="EFEFEF">
 	<div class="iframeTitleBar">
-		Reboot Appliance 
+		Reboot Asterisk 
 		<span class='refresh_icon' onclick="window.location.reload();" >&nbsp;<img src="images/refresh.png" title=" Refresh " border=0 >&nbsp;</span>
 	</div>
 	<center><div id="tabbedMenu"></div></center>
