--- a/config/features.html
+++ b/config/features.html
@@ -80,14 +80,14 @@ body {
 		<table align="center" cellpadding="2" cellspacing="2" border="0">
 		<tr>
 			<td valign="top" align="right"><input type="checkbox" id="chk_featureMap_blindxfer"></td>
-			<td><input size="2" id="featureMap_blindxfer"> Blind Transfer (default is #)</td>
+			<td><input size="2" id="featureMap_blindxfer"> Blind Transfer (commonly #)</td>
 		</tr>
 		<tr>
 			<td height="10"></td>
 		</tr>
 		<tr>
 			<td valign="top" align="right"><input type="checkbox" id="chk_featureMap_disconnect"></td>
-			<td><input size="2" id="featureMap_disconnect"> Disconnect (default is *)</td>
+			<td><input size="2" id="featureMap_disconnect"> Disconnect (commonly *)</td>
 		</tr>
 		<tr>
 			<td height="10"></td>
