--- a/config/features2.html
+++ b/config/features2.html
@@ -61,6 +61,24 @@
 			margin: 4px;
 		}
 
+		#call_parking .feature label, #feature_map .feature label, #feature_options .feature label {
+			float: left;
+			margin-right: 5px;
+			text-align: right;
+		}
+
+		#call_parking .feature label {
+			width: 200px;
+		}
+
+		#feature_options .feature label {
+			width: 150px;
+		}
+
+		#feature_map .feature label {
+			width: 120px;
+		}
+
 		.feature label {
 			width: 200px;
 		}
