--- a/branches/2.0/config/hardware_dahdi.html
+++ b/branches/2.0/config/hardware_dahdi.html
@@ -89,6 +89,21 @@
 		background-color:#FFFFFF;
 	}
 
+	.advanced {
+		text-align: left;
+	}
+
+	.advanced > div > span {
+		float: left;
+		margin-right: 5px;
+		text-align: right;
+		width: 50%;
+	}
+
+	.advanced > div > input, .advanced > div > select {
+		text-align: left;
+	}
+
 	.pageheading{
 		padding : 10px 10px 4px 10px;
 		font-size: 135%;
@@ -177,16 +192,157 @@
 		</table>
 	</div>
 
-	<div style="overflow:auto;left:40">
-		<table  cellpadding=5 cellspacing=1 align=center border=0>
-			<tr>	<td height=50 valign='bottom'>
-					<span class='guiButtonCancel' id="cancel_b" onclick='window.location.reload();'>Cancel Changes</span>
-					<span class='guiButtonEdit' id="save_b"  onclick='applyDigitalSettings();'>Update Settings</span>&nbsp;&nbsp;
-				</td>
-			</tr>
-		</table>
+	<div class="advanced">
+		<div class="pageheading">Advanced Settings</div>
+		<div>
+			<span>Module Name:</span>
+			<input id="zap_moduleName" dfalt='wctdm24xxp' size=10>
+		</div>
+		<div>
+			<span>Opermode <img src="images/tooltip_info.gif" tip="en,opermode_settings,0" class='tooltipinfo'>:</span>
+			<input type='checkbox' id='enable_disable_checkbox_opermode'>
+			<select id="opermode" dfalt='USA'>
+				<option value="USA">USA</option>
+				<option value="ARGENTINA">ARGENTINA</option>
+				<option value="AUSTRALIA">AUSTRALIA</option>
+				<option value="AUSTRIA">AUSTRIA</option>
+				<option value="BAHRAIN">BAHRAIN</option>
+				<option value="BELGIUM">BELGIUM</option>
+				<option value="BRAZIL">BRAZIL</option>
+				<option value="BULGARIA">BULGARIA</option>
+				<option value="CANADA">CANADA</option>
+				<option value="CHILE">CHILE</option>
+				<option value="CHINA">CHINA</option>
+				<option value="COLUMBIA">COLUMBIA</option>
+				<option value="CROATIA">CROATIA</option>
+				<option value="CYRPUS">CYRPUS</option>
+				<option value="CZECH">CZECH</option>
+				<option value="DENMARK">DENMARK</option>
+				<option value="ECUADOR">ECUADOR</option>
+				<option value="EGYPT">EGYPT</option>
+				<option value="ELSALVADOR">ELSALVADOR</option>
+				<option value="FCC">FCC</option>
+				<option value="FINLAND">FINLAND</option>
+				<option value="FRANCE">FRANCE</option>
+				<option value="GERMANY">GERMANY</option>
+				<option value="GREECE">GREECE</option>
+				<option value="GUAM">GUAM</option>
+				<option value="HONGKONG">HONGKONG</option>
+				<option value="HUNGARY">HUNGARY</option>
+				<option value="ICELAND">ICELAND</option>
+				<option value="INDIA">INDIA</option>
+				<option value="INDONESIA">INDONESIA</option>
+				<option value="IRELAND">IRELAND</option>
+				<option value="ISRAEL">ISRAEL</option>
+				<option value="ITALY">ITALY</option>
+				<option value="JAPAN">JAPAN</option>
+				<option value="JORDAN">JORDAN</option>
+				<option value="KAZAKHSTAN">KAZAKHSTAN</option>
+				<option value="KUWAIT">KUWAIT</option>
+				<option value="LATVIA">LATVIA</option>
+				<option value="LEBANON">LEBANON</option>
+				<option value="LUXEMBOURG">LUXEMBOURG</option>
+				<option value="MACAO">MACAO</option>
+				<option value="MALAYSIA">MALAYSIA</option>
+				<option value="MALTA">MALTA</option>
+				<option value="MEXICO">MEXICO</option>
+				<option value="MOROCCO">MOROCCO</option>
+				<option value="NETHERLANDS">NETHERLANDS</option>
+				<option value="NEWZEALAND">NEWZEALAND</option>
+				<option value="NIGERIA">NIGERIA</option>
+				<option value="NORWAY">NORWAY</option>
+				<option value="OMAN">OMAN</option>
+				<option value="PAKISTAN">PAKISTAN</option>
+				<option value="PERU">PERU</option>
+				<option value="PHILIPPINES">PHILIPPINES</option>
+				<option value="POLAND">POLAND</option>
+				<option value="PORTUGAL">PORTUGAL</option>
+				<option value="ROMANIA">ROMANIA</option>
+				<option value="RUSSIA">RUSSIA</option>
+				<option value="SAUDIARABIA">SAUDIARABIA</option>
+				<option value="SINGAPORE">SINGAPORE</option>
+				<option value="SLOVAKIA">SLOVAKIA</option>
+				<option value="SLOVENIA">SLOVENIA</option>
+				<option value="SOUTHAFRICA">SOUTHAFRICA</option>
+				<option value="SOUTHKOREA">SOUTHKOREA</option>
+				<option value="SPAIN">SPAIN</option>
+				<option value="SWEDEN">SWEDEN</option>
+				<option value="SWITZERLAND">SWITZERLAND</option>
+				<option value="SYRIA">SYRIA</option>
+				<option value="TAIWAN">TAIWAN</option>
+				<option value="TBR21">TBR21</option>
+				<option value="THAILAND">THAILAND</option>
+				<option value="UAE">UAE</option>
+				<option value="UK">UK</option>
+				<option value="YEMEN">YEMEN</option>
+			</select>
+		</div>
+		<div>
+			<span>a-law override <img src="images/tooltip_info.gif" tip="en,opermode_settings,1" class='tooltipinfo'>:</span>
+			<input type='checkbox' id='enable_disable_checkbox_alawoverride'>
+			<select id="alawoverride" dfalt='0'>
+				<option value="0">ulaw</option>
+				<option value="1">alaw</option>
+			</select>
+		</div>
+		<div>
+			<span>fxs honor mode <img src="images/tooltip_info.gif" tip="en,opermode_settings,2" class='tooltipinfo'>:</span>
+			<input type='checkbox' id='enable_disable_checkbox_fxshonormode'>
+			<select id="fxshonormode" dfalt='0'>
+				<option value="0">apply opermode to fxo modules only </option>
+				<option value="1">apply opermode to fxs and fxo modules</option>
+			</select>
+		</div>
+		<div>
+			<span>boostringer <img src="images/tooltip_info.gif" tip="en,opermode_settings,3" class='tooltipinfo'>:</span>
+			<input type='checkbox' id='enable_disable_checkbox_boostringer'>
+			<select id="boostringer" dfalt='0'>
+				<option value="0">normal</option>
+				<option value="1">peak(89V)</option>
+			</select>
+		</div>
+		<div>
+			<span>fastringer <img src="images/tooltip_info.gif" tip="en,opermode_settings,5" class='tooltipinfo'>:</span>
+			<input type='checkbox' id='enable_disable_checkbox_fastringer'>
+			<select id="fastringer" dfalt='0'>
+				<option value="0">normal</option>
+				<option value="1">fast ringer (25hz) </option>
+			</select>
+		</div>
+		<div>
+			<span>lowpower <img src="images/tooltip_info.gif" tip="en,opermode_settings,4" class='tooltipinfo'>:</span>
+			<input type='checkbox' id='enable_disable_checkbox_lowpower'>
+			<select id="lowpower" dfalt='0'>
+				<option value="0">normal</option>
+				<option value="1">fast ringer to 50V peak</option>
+			</select>
+		</div>
+		<div>
+			<span>ring detect <img src="images/tooltip_info.gif" tip="en,opermode_settings,6" class='tooltipinfo'>:</span>
+			<input type='checkbox' id='enable_disable_checkbox_fwringdetect'>
+			<select id="fwringdetect" dfalt='0'>
+				<option value='0'>standard</option>
+				<option value='1'>full wave</option>
+			</select>
+		</div>
+		<div>
+			<span>MWI mode <img src="images/tooltip_info.gif" tip="en,opermode_settings,7" class='tooltipinfo'>:</span>
+			<input type='checkbox' id='enable_disable_checkbox_mwimode'>
+			<select id="mwimode" dfalt='none'>
+				<option value='none'>None</option>
+				<option value='FSK'>FSK</option>
+				<option value='NEON'>NEON</option>
+			</select>
+		</div>
+		<div class='neon_settings' style='display:none'>
+			<span>Neon MWI voltage Level:</span><input id="neonmwi_level" size=2>
+			<span>Neon MWI off Limit (ms):</span><input id="neonmwi_offlimit" size=4>
+		</div>
 	</div>
-
+	<div style="text-align:center; overflow:auto;left:40">
+		<span class='guiButtonCancel' id="cancel_b" onclick='window.location.reload();'>Cancel Changes</span>
+		<span class='guiButtonEdit' id="save_b"  onclick='applyDigitalSettings();'>Update Settings</span>&nbsp;&nbsp;
+	</div>
 </div>
 
 <div id="errmsg" style="display:none"></div>
